Add ore complete form

--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Photo by <a href="https://unsplash.com/@kevin_w_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kevin Wang</a> on <a href="https://unsplash.com/photos/a-very-tall-city-with-a-lot-of-tall-buildings-QUFDUFUJ5CE?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+    <div><img src="city.jpg"></div>
+    <div><img src="misc/odin-lined.png"></div>
+    <div>Photo by <a href="https://unsplash.com/@kevin_w_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kevin Wang</a> on <a href="https://unsplash.com/photos/a-very-tall-city-with-a-lot-of-tall-buildings-QUFDUFUJ5CE?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
+    <div>
+    <div><h1>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</h1>
+    <h1>You <em>know</em> you want to.</h1></div>
+    <div>
     <form>
-
+        <label for="first_name">First Name</label>
+        <input type="text" id="first_name" name="first_name">
+        <label for="last_name">Last Name</label>
+        <input type="text" id="last_name" name="last_name">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email">
+        <label for="phone_number">Phone Number</label>
+        <input type="tel">
     </form>
+    </div>
+    <div><button>Create Account</button></div>
+    <div><p>Already have an account? Log in</p></div>
+    </div>
 </body>
 </html>
