--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="body-container">
+    <div class="img-sidebar">
     <div><img src="city.jpg"></div>
-    <div><img src="misc/odin-lined.png"></div>
+    <div class="logo">
+    <div><img src="misc/odin-lined.png" id="city-img"></div>
+    <div class="logo-write">Odin</div>
+    </div>
     <div>Photo by <a href="https://unsplash.com/@kevin_w_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kevin Wang</a> on <a href="https://unsplash.com/photos/a-very-tall-city-with-a-lot-of-tall-buildings-QUFDUFUJ5CE?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
-    <div>
+    </div>
+    <div class="info-side">
+    <div class="background">
     <div><h1>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</h1>
     <h1>You <em>know</em> you want to.</h1></div>
+    </div>
     <div>
     <form>
         <label for="first_name">First Name</label>
@@ -23,10 +31,17 @@
         <input type="email" id="email" name="email">
         <label for="phone_number">Phone Number</label>
         <input type="tel">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password">
+        <label for="confirm">Confirm Password</label>
+        <input type="password" id="confirm" name="confirm">
     </form>
     </div>
+    <div class="background">
     <div><button>Create Account</button></div>
     <div><p>Already have an account? Log in</p></div>
+    </div>
+    </div>
     </div>
 </body>
 </html>
