Got basic layout in place for image sidebar

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <div class="body-container">
     <div class="img-sidebar">
-    <div><img src="city.jpg"></div>
+    <div><img src="city.jpg" id="city-img"></div>
     <div class="logo">
-    <div><img src="misc/odin-lined.png" id="city-img"></div>
+    <div><img src="misc/odin-lined.png" id="odin-pic"></div>
     <div class="logo-write">Odin</div>
     </div>
-    <div>Photo by <a href="https://unsplash.com/@kevin_w_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kevin Wang</a> on <a href="https://unsplash.com/photos/a-very-tall-city-with-a-lot-of-tall-buildings-QUFDUFUJ5CE?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
+    <div class="credits">Photo by <a href="https://unsplash.com/@kevin_w_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kevin Wang</a> on <a href="https://unsplash.com/photos/a-very-tall-city-with-a-lot-of-tall-buildings-QUFDUFUJ5CE?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
     </div>
     <div class="info-side">
     <div class="background">
-    <div><h1>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</h1>
+    <div class="top-text"><h1>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</h1>
     <h1>You <em>know</em> you want to.</h1></div>
     </div>
     <div>
