--- a/index.html
+++ b/index.html
@@ -14,32 +14,77 @@
     <div><img src="misc/odin-lined.png" id="odin-pic"></div>
     <div class="logo-write">Odin</div>
     </div>
-    <div class="credits">Photo by <a href="https://unsplash.com/@kevin_w_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kevin Wang</a> on <a href="https://unsplash.com/photos/a-very-tall-city-with-a-lot-of-tall-buildings-QUFDUFUJ5CE?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
+    <div class="credits">Photo by <a href="https://unsplash.com/@kevin_w_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" class="cite">Kevin Wang</a> on <a href="https://unsplash.com/photos/a-very-tall-city-with-a-lot-of-tall-buildings-QUFDUFUJ5CE?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" class="cite">Unsplash</a></div>
     </div>
     <div class="info-side">
     <div class="background">
     <div class="top-text"><h1>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</h1>
     <h1>You <em>know</em> you want to.</h1></div>
     </div>
-    <div>
+    <div class="form-style">
     <form>
+        <legend>Let's do this!</legend>
+        <div class="form-flex-gen">
+        <div class="form-flex-input">
+        <div>
         <label for="first_name">First Name</label>
+        </div>
+        <div>
         <input type="text" id="first_name" name="first_name">
+        </div>
+        </div>
+        <div class="form-flex-input">
+        <div>
         <label for="last_name">Last Name</label>
+        </div>
+        <div>
         <input type="text" id="last_name" name="last_name">
+        </div>
+        </div>
+        </div>
+        <div class="form-flex-gen">
+        <div class="form-flex-input">
+        <div>
         <label for="email">Email</label>
+        </div>
+        <div>
         <input type="email" id="email" name="email">
+        </div>
+        </div>
+        <div class="form-flex-input">
+        <div>
         <label for="phone_number">Phone Number</label>
+        </div>
+        <div>
         <input type="tel">
+        </div>
+        </div>
+        </div>
+        <div class="form-flex-gen">
+        <div class="form-flex-input">
+            <div>
         <label for="password">Password</label>
+        </div>
+        <div>
         <input type="password" id="password" name="password">
+        </div>
+        </div>
+        <div class="form-flex-input">
+        <div>
         <label for="confirm">Confirm Password</label>
+        </div>
+        <div>
         <input type="password" id="confirm" name="confirm">
+        </div>
+        </div>
+        </div>
     </form>
     </div>
     <div class="background">
+    <div class="bottom-text">
     <div><button>Create Account</button></div>
-    <div><p>Already have an account? Log in</p></div>
+    <div class="account-check"><p>Already have an account? <a>Log in</a></p></div>
+    </div>
     </div>
     </div>
     </div>
